fix editing ended on sinulator

--- a/Lister/Main.storyboard
+++ b/Lister/Main.storyboard
@@ -251,8 +251,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GGV-KM-Dy4" misplaced="YES">
-                                <rect key="frame" x="0.0" y="576" width="540" height="44"/>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GGV-KM-Dy4">
+                                <rect key="frame" x="0.0" y="980" width="768" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="Qvg-JJ-NuC"/>
                                 </constraints>
@@ -270,8 +270,8 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="6c6-zt-C8U" misplaced="YES">
-                                <rect key="frame" x="20" y="48" width="500" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="6c6-zt-C8U">
+                                <rect key="frame" x="20" y="113" width="728" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="fsW-nc-858"/>
                                 </constraints>
@@ -281,14 +281,14 @@
                                     <outlet property="delegate" destination="A6c-cj-pOH" id="Sa3-nO-5G4"/>
                                 </connections>
                             </textField>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New List" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8xf-B6-SKw" misplaced="YES">
-                                <rect key="frame" x="238" y="20" width="65" height="20"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New List" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8xf-B6-SKw">
+                                <rect key="frame" x="350" y="84" width="69" height="21"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Alt-LD-ufw" misplaced="YES">
-                                <rect key="frame" x="78" y="158" width="88" height="88"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Alt-LD-ufw">
+                                <rect key="frame" x="192" y="224" width="88" height="88"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="88" id="0p2-bx-ldq"/>
@@ -301,8 +301,8 @@
                                     <action selector="pickColor:" destination="A6c-cj-pOH" eventType="touchUpInside" id="boc-aA-dja"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lgv-ck-AGl" misplaced="YES">
-                                <rect key="frame" x="226" y="158" width="88" height="88"/>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lgv-ck-AGl">
+                                <rect key="frame" x="340" y="224" width="88" height="88"/>
                                 <color key="backgroundColor" red="0.43921568989999998" green="0.7019608021" blue="0.87450981139999995" alpha="1" colorSpace="deviceRGB"/>
                                 <state key="normal">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -311,8 +311,8 @@
                                     <action selector="pickColor:" destination="A6c-cj-pOH" eventType="touchUpInside" id="Xpi-h3-8UF"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jZ8-Dj-9bO" misplaced="YES">
-                                <rect key="frame" x="374" y="158" width="88" height="88"/>
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jZ8-Dj-9bO">
+                                <rect key="frame" x="488" y="224" width="88" height="88"/>
                                 <color key="backgroundColor" red="0.70588237050000002" green="0.83529412749999998" blue="0.35294118520000001" alpha="1" colorSpace="deviceRGB"/>
                                 <state key="normal">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -321,8 +321,8 @@
                                     <action selector="pickColor:" destination="A6c-cj-pOH" eventType="touchUpInside" id="wN2-IV-Pog"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pNj-Ax-EAF" misplaced="YES">
-                                <rect key="frame" x="78" y="306" width="88" height="88"/>
+                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pNj-Ax-EAF">
+                                <rect key="frame" x="192" y="372" width="88" height="88"/>
                                 <color key="backgroundColor" red="0.94901961089999998" green="0.87450981139999995" blue="0.24705882370000001" alpha="1" colorSpace="deviceRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="88" id="Ho0-su-j8z"/>
@@ -335,8 +335,8 @@
                                     <action selector="pickColor:" destination="A6c-cj-pOH" eventType="touchUpInside" id="JT5-IK-yr9"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mRd-wH-LuW" misplaced="YES">
-                                <rect key="frame" x="226" y="306" width="88" height="88"/>
+                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mRd-wH-LuW">
+                                <rect key="frame" x="340" y="372" width="88" height="88"/>
                                 <color key="backgroundColor" red="0.95686274770000002" green="0.62352943419999995" blue="0.25490197539999998" alpha="1" colorSpace="deviceRGB"/>
                                 <state key="normal">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -345,8 +345,8 @@
                                     <action selector="pickColor:" destination="A6c-cj-pOH" eventType="touchUpInside" id="CRP-Fn-fkE"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lsq-Ej-kE5" misplaced="YES">
-                                <rect key="frame" x="374" y="306" width="88" height="88"/>
+                            <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lsq-Ej-kE5">
+                                <rect key="frame" x="488" y="372" width="88" height="88"/>
                                 <color key="backgroundColor" red="0.9529411793" green="0.4196078479" blue="0.42745098469999998" alpha="1" colorSpace="deviceRGB"/>
                                 <state key="normal">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -355,8 +355,8 @@
                                     <action selector="pickColor:" destination="A6c-cj-pOH" eventType="touchUpInside" id="sIJ-QG-bO0"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Color" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J8C-Uk-vmn" misplaced="YES">
-                                <rect key="frame" x="20" y="118" width="41" height="20"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Color" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J8C-Uk-vmn">
+                                <rect key="frame" x="20" y="183" width="43" height="21"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -411,6 +411,7 @@
                         <outlet property="titleLabel" destination="8xf-B6-SKw" id="bYD-60-ziA"/>
                         <outlet property="toolbar" destination="GGV-KM-Dy4" id="9Ma-fD-F41"/>
                         <outlet property="yellowButton" destination="pNj-Ax-EAF" id="2P7-bp-bdm"/>
+                        <outlet property="NameInput" destination="6c6-zt-C8U" id="name-outlet-6c6-zt-C8U"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jCa-NC-W2h" userLabel="First Responder" sceneMemberID="firstResponder"/>
